Version 23.11.1. Added trial methods
